Fix spacing issues

--- a/nivls_website/nivls_website/static/commons/css/20/main.less
+++ b/nivls_website/nivls_website/static/commons/css/20/main.less
@@ -506,6 +506,9 @@ article.post {
 	border-bottom: 1px solid #6596B6;
 
 	.info {
+	    i {
+		margin-right: 5px;
+	    }
 	    line-height: 15px;
 	    font-size:0.85em;
 	}
